src/test/deca/context/extension/invalid/TAB_decl_index.deca
{
    int[] a = new int[5.1f];
}